--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -11,3 +11,34 @@
 /* RESPONSIVE DESIGN --> media queries */
 
 /*ACCESSIBILITY */
+
+/* ================================= */
+
+/* SOCIAL MEDIA ICONS */
+/* Style all font awesome icons */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+
+/* Add a hover effect if you want */
+.fa:hover {
+  opacity: 0.7;
+}
+
+/* Set a specific color for each brand */
+
+/* Facebook */
+.fa-facebook {
+  background: #3b5998;
+  color: white;
+}
+
+/* Twitter */
+.fa-twitter {
+  background: #55acee;
+  color: white;
+}
