--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -25,6 +25,15 @@
 }
 
 /* Add a hover effect if you want */
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 30px;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+}
+
 .fa:hover {
   opacity: 0.7;
 }
