--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -14,6 +14,13 @@
 
 /* ================================= */
 
+/* REVIEW DIV */
+
+.review-div {
+  border: 1px;
+  border-color: black;
+}
+
 /* SOCIAL MEDIA ICONS */
 /* Style all font awesome icons */
 .fa {
