--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,11 +7,13 @@
 }
 
 /* TODO: Think about: */
+
+/*ACCESSIBILITY --> as part of entire process (from HTML to JS) */
+
 /* RESPONSIVE DESIGN --> media queries */
-/*ACCESSIBILITY */
 
 @media (width <= 600px) {
-  body {
+  html {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -32,61 +34,170 @@
 
 /* ============================================================== */
 
+/* font family options: ink free/gabriola/ravie */
+
+body {
+  background-color: white;
+}
+
 /* LOGO IMAGE */
-img {
+#logo {
   height: 10rem;
   width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: left;
 }
 
 /* HEADER */
-
 header {
-  padding: 0.5rem;
+  padding: 2rem;
+  margin: 1rem;
+  height: 10rem;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 
-/* font-family: ink free/gabriola/ravie */
+#titles {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
 
 h1 {
   font-family: ravie;
-  font-size: 3rem;
+  font-size: 6rem;
   color: rgb(0, 56, 0);
-  -webkit-text-stroke: 0.1px rgba(255, 81, 0, 0.7);
+  -webkit-text-stroke: 0.25px rgba(255, 81, 0, 0.75);
 }
 
-nav {
-  font-family: nyala;
+h2 {
+  font-family: verdana;
+  color: rgb(0, 0, 0);
+}
+
+/* MARQUEE */
+marquee {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 1rem;
-  color: rgb(0, 56, 0);
+  font-weight: 700;
+  color: #000000;
+  padding: 2rem;
+  border-style: solid;
+  border-width: 0.25px;
+  border-color: rgba(255, 81, 0, 0.75);
+  background-color: rgba(255, 81, 0, 0.25);
+}
+
+/*! DECORATIVE IMAGES --> ran out of time to execute desired styling */
+/* img {
+  height: 25rem;
+  width: auto;
+} */
+
+/* #image1 {
+  position: fixed;
+  left: 0;
+  top: 21rem;
+  object-fit: cover;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  -ms-grid-column-span: 1;
+}
+
+/* #image2 {
+  position: fixed;
+  right: 0;
+  top: 21rem; 
+  grid-column-start: 4;
+  grid-row-start: 1;
+  -ms-grid-column-span: 1;
+} */
+
+/*  FORM + DISPLAY AREA */
+h3 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1rem;
+  color: #000000;
+}
+
+h4 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1rem;
+}
+
+p {
+  font-family: verdana;
+}
+
+#form-section {
+  padding: 1rem;
+  height: 10rem;
+  /* position: absolute; */
+
   display: flex;
-  justify-content: space-between;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  -ms-grid-column-span: 1;
+  -ms-grid-row-span: 2;
+}
+
+#container-title {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#display-title {
+  padding: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  -ms-grid-column-span: 3;
+  display: grid;
+  flex-direction: column;
   align-items: center;
 }
 
-/* REVIEW DIV */
-
-#review-section {
+#review-container {
   padding: 2rem;
-}
+  height: 25rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-column-start: 1;
+  grid-row-start: 2;
+  justify-content: space-evenly;
+  align-items: center;
 
-.review-div {
-  padding: 1rem;
-  border-style: solid;
-  border-width: 0.5px;
-  border-color: black;
+  /* background-image: url("./assets/background.webp"); */
 }
 
 /* FOOTER */
-
 footer {
-  display: flex;
+  grid-column-start: 1;
+  grid-row-start: 8;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  height: auto;
+  display: grid;
   flex-direction: row;
-  gap: 15x;
   justify-content: space-evenly;
-  flex-flow: wrap;
+  align-items: center;
+  border-style: solid;
+  border-width: 0.25px;
+  border-color: rgba(255, 81, 0, 0.75);
+  background-color: rgba(255, 81, 0, 0.25);
 }
 
 #footer-div {
@@ -102,31 +213,35 @@ footer {
   justify-content: space-between;
 }
 
+/* BACK TO TOP BUTTON  */
 .top-link {
-  transition: all 0.25s ease-in-out;
-  position: fixed;
-  bottom: 0;
-  right: 0;
   display: inline-flex;
-  color: #000000;
-  cursor: pointer;
   align-items: center;
   justify-content: center;
-  margin: 0 1rem 1rem 0;
-  border-radius: 100%;
-  /* padding: 0.5rem; */
-  font-size: 2rem;
-  text-decoration: none;
+  position: fixed;
+  bottom: 3rem;
+  right: 0;
+
+  padding: 0.5rem;
+  margin: 0 0.5rem 0.3rem 0;
   width: 3rem;
   height: 3rem;
 
-  z-index: 100;
-  background-color: rgba(0, 0, 0, 0.125);
   color: rgb(0, 0, 0);
-  border-color: rgba(255, 255, 255);
-  cursor: pointer;
-
+  font-size: 2rem;
   font-weight: 500;
+  text-decoration: none;
+
+  transition: all 0.25s ease-in-out;
+  cursor: pointer;
+  border-radius: 100%;
+
+  background-color: rgba(0, 0, 0, 0.125);
+  border-color: rgba(255, 255, 255);
+
+  /* display: hidden;
+  float: inline-start;
+  z-index: 100; */
 }
 
 .top-link:hover {
@@ -134,40 +249,15 @@ footer {
   color: rgb(255, 255, 255);
 }
 
-/* SOCIAL MEDIA ICONS - Style all font awesome icons */
-/* 
+/* SOCIAL MEDIA ICONS */
 .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
+  padding: 1rem;
+  height: auto;
+  width: 1rem;
+  font-size: 1rem;
   text-decoration: none;
-}
-
-/* Add a hover effect if you want */
-/* .fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 30px;
-  text-align: center;
-  text-decoration: none;
-  border-radius: 50%;
 }
 
 .fa:hover {
-  opacity: 0.7;
+  opacity: 0.75;
 }
-
-/* Set a specific color for each brand */
-
-/* Facebook
-.fa-facebook {
-  background: #3b5998;
-  color: white;
-}
-
-/* Twitter 
-.fa-twitter {
-  background: #55acee;
-  color: white;
-} */
