--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -37,7 +37,12 @@
 /* font family options: ink free/gabriola/ravie */
 
 body {
-  background-color: white;
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.95),
+      rgba(255, 255, 255, 0.75),
+      rgba(255, 255, 255, 0.95)
+    ),
+    url("../public/assets/background.webp");
 }
 
 /* LOGO IMAGE */
@@ -52,9 +57,10 @@ body {
 
 /* HEADER */
 header {
-  padding: 2rem;
-  margin: 1rem;
-  height: 10rem;
+  background-color: white;
+  /* padding: 3rem;
+  margin: 2rem; */
+  height: 12rem;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -70,7 +76,7 @@ header {
 
 h1 {
   font-family: ravie;
-  font-size: 6rem;
+  font-size: 5rem;
   color: rgb(0, 56, 0);
   -webkit-text-stroke: 0.25px rgba(255, 81, 0, 0.75);
 }
@@ -135,12 +141,13 @@ p {
 }
 
 #form-section {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
   padding: 1rem;
   height: 10rem;
-  /* position: absolute; */
-
   display: flex;
-  flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
   grid-column-start: 1;
@@ -159,38 +166,45 @@ p {
 
 #display-title {
   padding: 1rem;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  grid-column-start: 1;
+  font-size: 2rem;
+  color: rgb(0, 56, 0);
+  -webkit-text-stroke: 0.25px rgba(255, 81, 0, 0.75);
+  grid-column-start: 2;
   grid-row-start: 1;
-  -ms-grid-column-span: 3;
-  display: grid;
-  flex-direction: column;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
 }
 
 #review-container {
-  padding: 2rem;
-  height: 25rem;
+  padding: 3rem;
+  height: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   grid-column-start: 1;
-  grid-row-start: 2;
-  justify-content: space-evenly;
+  grid-row-start: 1;
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem;
+  justify-content: center;
   align-items: center;
+}
 
-  /* background-image: url("./assets/background.webp"); */
+.review-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* FOOTER */
 footer {
-  grid-column-start: 1;
-  grid-row-start: 8;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-transform: uppercase;
   font-size: 0.75rem;
   height: auto;
-  display: grid;
+  display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
@@ -246,6 +260,25 @@ footer {
 
 .top-link:hover {
   background-color: rgba(255, 81, 0, 0.75);
+  color: rgb(255, 255, 255);
+}
+
+/* SUBMIT BUTTON */
+#submit-button {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 3px;
+  width: auto;
+  height: auto;
+  color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.125);
+  border-color: rgba(255, 255, 255);
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 750;
+}
+
+#submit-button:hover {
+  background-color: rgb(255, 123, 0);
   color: rgb(255, 255, 255);
 }
 
