--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -42,7 +42,7 @@ body {
       rgba(255, 255, 255, 0.75),
       rgba(255, 255, 255, 0.95)
     ),
-    url("../public/assets/background.webp");
+    url("./assets/background.webp");
 }
 
 /* LOGO IMAGE */
@@ -92,7 +92,7 @@ marquee {
   font-size: 1rem;
   font-weight: 700;
   color: #000000;
-  padding: 2rem;
+  padding: 1rem;
   border-style: solid;
   border-width: 0.25px;
   border-color: rgba(255, 81, 0, 0.75);
