--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -42,7 +42,7 @@ body {
       rgba(255, 255, 255, 0.75),
       rgba(255, 255, 255, 0.95)
     ),
-    url("./assets/background.webp");
+    url("../public/assets/background.webp");
 }
 
 /* LOGO IMAGE */
